--- a/src/assets/styles/common/theme.css
+++ b/src/assets/styles/common/theme.css
@@ -1,138 +1,55 @@
 :root {
-  --white: hsl(0, 0%, 100%);
-  --black: hsl(0, 0%, 0%);
+  /* color */
+  --white: fff;
+  --white-fa: #fafafa;
+  --black-100: #000;
+  --black-200: #27273c;
 
-  --gray-50: hsl(0, 0%, 95%);
-  --gray-100: hsl(0, 0%, 90%);
-  --gray-200: hsl(0, 0%, 80%);
-  --gray-300: hsl(0, 0%, 70%);
-  --gray-400: hsl(0, 0%, 60%);
-  --gray-500: hsl(0, 0%, 50%);
-  --gray-600: hsl(0, 0%, 40%);
-  --gray-700: hsl(0, 0%, 30%);
-  --gray-800: hsl(0, 0%, 20%);
-  --gray-900: hsl(0, 0%, 10%);
-  --gray-950: hsl(0, 0%, 5%);
+  --gray-100: #eeeeee;
+  --gray-200: #e8e8e8;
+  --gray-300: #d4d4d4;
+  --gray-300: #b2b2b2;
+  --gray-500: #a4a9ac;
+  --gray-600: #666c70;
+  --gray-700: #5a5a5a;
 
-  --blue-gray-50: #f0f4f8;
-  --blue-gray-100: #d9e2ec;
-  --blue-gray-200: #bcccdc;
-  --blue-gray-300: #9fb3c8;
-  --blue-gray-400: #829ab1;
-  --blue-gray-500: #627d98;
-  --blue-gray-600: #486581;
-  --blue-gray-700: #334e68;
-  --blue-gray-800: #243b53;
-  --blue-gray-900: #102a43;
-  --blue-gray-950: #081521;
+  --blue-50: #002566;
+  --blue-100: #004acb;
+  /* 200 = Primary */
+  --blue-200: #2c79fe;
+  --blue-300: #5ab2ff;
+  --blue-400: #a0deff;
+  --blue-500: #caf4ff;
+  --blue-600: #f4f9fe;
 
-  --stone-50: hsl(10, 1%, 95%);
-  --stone-100: hsl(10, 1%, 90%);
-  --stone-200: hsl(10, 1%, 80%);
-  --stone-300: hsl(10, 1%, 70%);
-  --stone-400: hsl(10, 1%, 60%);
-  --stone-500: hsl(10, 1%, 50%);
-  --stone-600: hsl(10, 1%, 40%);
-  --stone-700: hsl(10, 1%, 30%);
-  --stone-800: hsl(10, 1%, 20%);
-  --stone-900: hsl(10, 1%, 10%);
-  --stone-950: hsl(10, 1%, 5%);
+  --orange-100: #f94a29;
+  --orange-200: #ee5f5a;
+  --orange-300: #ff5b55;
+  --orange-400: #ff8a74;
+  --cream: #fff9d0;
 
-  --nature-50: hsl(120, 1%, 95%);
-  --nature-100: hsl(120, 1%, 90%);
-  --nature-200: hsl(120, 1%, 80%);
-  --nature-300: hsl(120, 1%, 70%);
-  --nature-400: hsl(120, 1%, 60%);
-  --nature-500: hsl(120, 1%, 50%);
-  --nature-600: hsl(120, 1%, 40%);
-  --nature-700: hsl(120, 1%, 30%);
-  --nature-800: hsl(120, 1%, 20%);
-  --nature-900: hsl(120, 1%, 10%);
-  --nature-950: hsl(120, 1%, 5%);
+  /* line-height */
+  --lineH-1-2: 1.2;
+  --lineH-1-5: 1.5;
+  --lineH-1-6: 1.6;
 
-  --red-50: hsl(0, 45%, 95%);
-  --red-100: hsl(0, 45%, 90%);
-  --red-200: hsl(0, 45%, 80%);
-  --red-300: hsl(0, 45%, 70%);
-  --red-400: hsl(0, 45%, 60%);
-  --red-500: hsl(0, 45%, 50%);
-  --red-600: hsl(0, 45%, 40%);
-  --red-700: hsl(0, 45%, 30%);
-  --red-800: hsl(0, 45%, 20%);
-  --red-900: hsl(0, 45%, 10%);
-  --red-950: hsl(0, 45%, 5%);
+  /* text size */
+  --fontSize12: 0.75rem;
+  --fontSize14: 0.875rem;
+  --fontSize16: 1rem;
+  --fontSize18: 1.125rem;
+  --fontSize20: 1.25rem;
+  --fontSize22: 1.375rem;
+  --fontSize24: 1.5rem;
+  --fontSize26: 1.625rem;
+  --fontSize28: 1.75rem;
 
-  --orange-50: hsl(20, 44%, 95%);
-  --orange-100: hsl(20, 45%, 90%);
-  --orange-200: hsl(20, 45%, 80%);
-  --orange-300: hsl(20, 45%, 70%);
-  --orange-400: hsl(20, 45%, 60%);
-  --orange-500: hsl(20, 45%, 50%);
-  --orange-600: hsl(20, 45%, 40%);
-  --orange-700: hsl(20, 45%, 30%);
-  --orange-800: hsl(20, 45%, 20%);
-  --orange-900: hsl(20, 45%, 10%);
-  --orange-950: hsl(20, 45%, 5%);
-
-  --yellow-50: hsl(50, 90%, 95%);
-  --yellow-100: hsl(50, 90%, 90%);
-  --yellow-200: hsl(50, 90%, 80%);
-  --yellow-300: hsl(50, 90%, 70%);
-  --yellow-400: hsl(50, 90%, 60%);
-  --yellow-500: hsl(50, 90%, 50%);
-  --yellow-600: hsl(50, 90%, 40%);
-  --yellow-700: hsl(50, 90%, 30%);
-  --yellow-800: hsl(50, 90%, 20%);
-  --yellow-900: hsl(50, 90%, 10%);
-  --yellow-950: hsl(50, 90%, 5%);
-
-  --green-50: hsl(150, 90%, 95%);
-  --green-100: hsl(150, 90%, 90%);
-  --green-200: hsl(150, 90%, 80%);
-  --green-300: hsl(150, 90%, 70%);
-  --green-400: hsl(150, 90%, 60%);
-  --green-500: hsl(150, 90%, 50%);
-  --green-600: hsl(150, 90%, 40%);
-  --green-700: hsl(150, 90%, 30%);
-  --green-800: hsl(150, 90%, 20%);
-  --green-900: hsl(150, 90%, 10%);
-  --green-950: hsl(150, 90%, 5%);
-
-  --blue-50: hsl(220, 90%, 95%);
-  --blue-100: hsl(220, 90%, 90%);
-  --blue-200: hsl(220, 90%, 80%);
-  --blue-300: hsl(220, 90%, 70%);
-  --blue-400: hsl(220, 90%, 60%);
-  --blue-500: hsl(220, 90%, 50%);
-  --blue-600: hsl(220, 90%, 40%);
-  --blue-700: hsl(220, 90%, 30%);
-  --blue-800: hsl(220, 90%, 20%);
-  --blue-900: hsl(220, 90%, 10%);
-  --blue-950: hsl(220, 90%, 5%);
-
-  --purple-50: hsl(260, 30%, 95%);
-  --purple-100: hsl(260, 30%, 90%);
-  --purple-200: hsl(260, 30%, 80%);
-  --purple-300: hsl(260, 30%, 70%);
-  --purple-400: hsl(260, 30%, 60%);
-  --purple-500: hsl(260, 30%, 50%);
-  --purple-600: hsl(260, 30%, 40%);
-  --purple-700: hsl(260, 30%, 30%);
-  --purple-800: hsl(260, 30%, 20%);
-  --purple-900: hsl(260, 30%, 10%);
-  --purple-950: hsl(260, 30%, 5%);
-
-  --pink-50: hsl(350, 45%, 95%);
-  --pink-100: hsl(350, 45%, 90%);
-  --pink-200: hsl(350, 45%, 80%);
-  --pink-300: hsl(350, 45%, 70%);
-  --pink-400: hsl(350, 45%, 60%);
-  --pink-500: hsl(350, 45%, 50%);
-  --pink-600: hsl(350, 45%, 40%);
-  --pink-700: hsl(350, 45%, 30%);
-  --pink-800: hsl(350, 45%, 20%);
-  --pink-900: hsl(350, 45%, 10%);
-  --pink-950: hsl(350, 45%, 5%);
+  /* font-weight */
+  --light: 200;
+  --regular: 200;
+  --semiBold: 500;
+  --bold: 700;
+  --black: 900;
 
   color-scheme: light dark;
 }
