--- a/src/styles/common/base.css
+++ b/src/styles/common/base.css
@@ -76,3 +76,15 @@ table {
 [tabindex="-1"] {
   outline: 0 !important;
 }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
