--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,3 +2,7 @@
 @import "./common/base.css" layer(base);
 @import "./common/reset.css" layer(reset);
 @import "./common/theme.css" layer(theme);
+
+@import "../components/atomComponents/link/link.css";
+@import "../components/atomComponents/button/button.css";
+@import "../components/atomComponents/form/form.css";
