--- a/src/components/schedule/schedule.html
+++ b/src/components/schedule/schedule.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./schedule.css" />
-  <script defer src="./schedule.js"></script>
+  <script type="module" src="./schedule.js"></script>
   <title>일정</title>
 </head>
 <body>
@@ -12,6 +12,10 @@
     <div class="schedule__header">
       <h2 class="schedule__title">My 일정</h2>
       <button type="button" class="schedule__show-all" aria-label="전체 일정 보기">Show All</button>
+      <svg class="schedule__icon" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M4.6875 3.38086L5.29395 2.8125L10.3125 7.5L5.29395 12.1875L4.6875 11.6221L9.09668 7.5L4.6875 3.38086Z"
+          fill="black" />
+      </svg>
     </div>
     <ul class="schedule__day-list">
       <li class="schedule__day">
