--- a/src/components/navigation/navigation.html
+++ b/src/components/navigation/navigation.html
@@ -66,7 +66,7 @@
       <nav>
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="#" class="nav__label" aria-label="">
+            <a href="#" class="nav__label">
               <svg
                 aria-hidden="true"
                 xmlns="http://www.w3.org/2000/svg"
