--- a/src/components/etiquette/etiquette.html
+++ b/src/components/etiquette/etiquette.html
@@ -10,11 +10,11 @@
   <body>
     <section class="etiquette">
       <div class="etiquette-title">
-        <h2>에티켓</h2>
+        <h3>에티켓</h3>
         <span class="etiquette-label">UK</span>
         </div>
       <div class="etiquette-contents">
-          <button type="button" class="etiquette-btn-prev" aria-label="이전 탐색">
+          <button type="button" class="etiquette-nav btn-prev" aria-label="이전 탐색">
             <svg xmlns="http://www.w3.org/2000/svg" width="27" height="32" viewBox="0 0 27 32" fill="none">
             <path d="M2.97308e-05 16L27 0.411544L27 31.5885L2.97308e-05 16Z" fill="#D9D9D9" fill-opacity="0.5"/>
             </svg>
@@ -24,7 +24,7 @@
             <li class="etiquette-card">
             <span class="etiquette-img card-01"></span>
             <div class="etiquette-cardTxt">
-              <h3>유머 있게 대화하기</h3>
+              <h4>유머 있게 대화하기</h4>
               <p>영국인은 위트 있는 유머를 즐겨요.
 
                 너무 진지한 분위기보다는 
@@ -38,7 +38,7 @@
             <li class="etiquette-card">
             <span class="etiquette-img card-02"></span>
             <div class="etiquette-cardTxt">
-              <h3>차례 기다리기</h3>
+              <h4>차례 기다리기</h4>
               <p>질서 있는 줄을
                 서는 것이 중요합니다.
 
@@ -48,7 +48,7 @@
             </div>
             </li>
           </ul>
-        <button type="button" class="etiquette-btn-nxt" aria-label="다음 탐색">
+        <button type="button" class="etiquette-nav btn-nxt" aria-label="다음 탐색">
           <svg xmlns="http://www.w3.org/2000/svg" width="27" height="32" viewBox="0 0 27 32" fill="none">
           <path d="M27 16L2.90494e-05 31.5885L3.04122e-05 0.411542L27 16Z" fill="#D9D9D9" fill-opacity="0.5"/>
           </svg>
