--- a/src/components/schedule/schedule.html
+++ b/src/components/schedule/schedule.html
@@ -12,12 +12,12 @@
     <div class="schedule__header">
       <h2 id="schedule__title">My 일정</h2>
       <div class="schedule__show-all">
-        <button type="button" class="schedule__show-all-btn" aria-label="전체 일정 보기">
+        <a href="#" class="schedule__show-all-btn" aria-label="전체 일정 보기">
           Show All
           <svg class="schedule__show-all-icon" aria-hidden="true" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M4.6875 3.38086L5.29395 2.8125L10.3125 7.5L5.29395 12.1875L4.6875 11.6221L9.09668 7.5L4.6875 3.38086Z" fill="black" />
           </svg>
-        </button>
+        </a>
       </div>
     </div>
     <ul class="schedule__day-list">
