--- a/src/components/etiquette/etiquette.css
+++ b/src/components/etiquette/etiquette.css
@@ -4,6 +4,7 @@ body {
 }
 
 /* 에티켓 시작 */
+
 .etiquette {
   max-width: 100%;
 }
@@ -20,59 +21,66 @@ body {
   font-size: var(--fontSize12);
   font-weight: var(--bold);
   color: var(--white-fa);
-  padding: 5px 12px 5px 12px;
+  padding: 5px 12px ;
   text-align: center;
   border-radius: 10px;
   display: flex;
 }
 
-/* 카드 콘텐츠  */
+/* 카드 영역  */
+
 .etiquette-contents {
   display: flex;
   align-items: center;
+  justify-content: center;
   position: relative;
+  width: 900px;
 }
 
 .etiquette-cards {
   display: flex;
   gap: 1.8rem;
+  transition: transform 0.4s ease;
   flex-flow: row nowrap;
-  justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 300px;
-  background-color: greenyellow;
+  will-change: transform;
+  overflow: hidden;
+  width: 760px;
+  transform: 0;
 }
+
+/* 개별 카드 */
 
 .etiquette-card {
   display: flex;
-  gap: 15px;
   flex-direction: row;
-  aspect-ratio: 3 / 5.33; /* 시안을 따라서 120px:200px로 잡음 */
-  align-items: center;
-  border: 1px solid var(--gray-500);
-  box-sizing: border-box;
-  border-radius: 10px;
-  width: 100%;
-  max-width: 365px;
-  height: 250px;
-  background-color: white;
   position: relative;
+  gap: 1.2rem; 
+  align-items: center;
+  box-sizing: border-box;
+ 
+  border: 1px solid var(--gray-300);
+  border-radius: 10px;
+ 
+  flex:0 0 365px;
+  width: 365px;
+  height: 250px; 
 }
 
 .etiquette-img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+
   flex: 3;
   width: 100%;
   height: 100%;
   min-width: 120px;
-  max-height:150px;  
+  max-height: 150px;  
   margin-left: 20px;
 }
 
-/* 카드 이미지 삽입 */
+/* 개별 카드 이미지 삽입 */
 .etiquette-img.card-01 {
   background-image: url(../../assets/images/etiquette-london-1_1x\ \ .webp); 
 }
@@ -80,11 +88,13 @@ body {
   background-image: url(../../assets/images/etiquette-london-2_1x\ \ .webp); 
 }
 .etiquette-img.card-03 {
-  background-image: url(../../assets/images); 
+  background-image: url(../../assets/images/etiquette-london-3_1x\ \ .webp); 
 }
 .etiquette-img.card-04 {
-  background-image: url(../../assets/images); 
+  background-image: url(../../assets/images/etiquette-london-4_1x\ \ .webp); 
 }
+
+/* 개별 카드 텍스트 영역 */
 
 .etiquette-cardTxt {
   flex: 5;
@@ -95,14 +105,12 @@ body {
 }
 
 .etiquette-cardTxt h4 {
-  display: block;
   position: absolute;
   top: 40px;
   font-size: var(--fontSize24);
 }
 
 .etiquette-cardTxt p {
-  display: block;
   position: absolute;
   top: 80px;
   font-size: var(--fontSize14);
@@ -112,7 +120,22 @@ body {
 }
 
 .etiquette-nav {
+  display: flex;
   box-sizing:border-box;
- border: none;
- padding: 0;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.prev {
+  position: absolute;
+  left: 25px;
+}
+
+.next {
+  position: absolute;
+  right: 25px;
 }
