feat : 에티켓 JS 작성 - js 코드 작성 적용

--- a/src/components/etiquette/etiquette.html
+++ b/src/components/etiquette/etiquette.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../styles/main.css" />
     <link rel="stylesheet" href="./etiquette.css" />
-    <script src="./etiquette.js" defer></script>
+    <script type="module" src="./etiquette.js"></script>
     <title>에티켓</title>
   </head>
   <body>
@@ -83,7 +83,7 @@
               </div>
               </li>
             </ul>
-            
+
           <button type="button" class="etiquette-nav next" aria-label="다음 탐색">
             <svg xmlns="http://www.w3.org/2000/svg" width="27" height="32" viewBox="0 0 27 32" fill="none">
             <path d="M27 16L2.90494e-05 31.5885L3.04122e-05 0.411542L27 16Z" fill="#D9D9D9" fill-opacity="0.5"/>
