--- a/src/components/map/map.css
+++ b/src/components/map/map.css
@@ -1,5 +1,58 @@
-#map {
-  width: 100%;
-  height: 80dvh;
-  background: #000;
+@import url(../../styles/common/theme.css);
+body {
+}
+.map-section {
+  h3 {
+    padding: 15px 0 15px 30px;
+  }
+}
+
+.map {
+  position: relative;
+
+  #map {
+    width: 100%;
+    height: 80dvh;
+    background: #000;
+  }
+
+  .map__button--search {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    border: none;
+    padding: 8px 17px 8px 6px;
+    border-radius: 50px;
+    background: var(--blue-200);
+    color: var(--white);
+    box-shadow: 0 4px 4px 0 rgb(0, 0, 0, 0.25);
+
+    svg {
+      display: inline;
+      margin-right: 15px;
+    }
+  }
+  .map__button--control {
+    display: flex;
+    gap: 5px;
+    position: absolute;
+    bottom: 15px;
+    left: 15px;
+
+    .map__button {
+      position: relative;
+      inline-size: 30px;
+      block-size: 30px;
+      border: 1px solid var(--gray-300);
+      border-radius: 3px;
+      background: var(--white-fa);
+
+      svg {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        translate: -50% -50%;
+      }
+    }
+  }
 }
