--- a/src/components/map/map.css
+++ b/src/components/map/map.css
@@ -15,7 +15,6 @@
   #map {
     width: 100%;
     height: 80dvh;
-    background: #000;
   }
 
   .map__button--search {
@@ -23,15 +22,21 @@
     top: 15px;
     left: 15px;
     border: none;
-    padding: 8px 17px 8px 6px;
+    padding: 12px 17px 12px 10px;
     border-radius: 50px;
     background: var(--blue-200);
+    font-size: var(--fontSize14);
     color: var(--white);
     box-shadow: 0 4px 4px 0 rgb(0, 0, 0, 0.25);
+    transition: background 0.2s ease-in-out;
+
+    &:hover {
+      background: var(--blue-100);
+    }
 
     svg {
       display: inline;
-      margin-right: 15px;
+      margin-right: 5px;
     }
   }
   .map__button--control {
@@ -43,17 +48,23 @@
 
     .map__button {
       position: relative;
-      inline-size: 30px;
-      block-size: 30px;
+      inline-size: 40px;
+      block-size: 40px;
       border: 1px solid var(--gray-300);
       border-radius: 3px;
       background: var(--white-fa);
+      transition: background 0.2s ease-in-out;
+
+      &:hover {
+        background: var(--gray-200);
+      }
 
       svg {
         position: absolute;
         top: 50%;
         left: 50%;
         translate: -50% -50%;
+        scale: 1.2;
       }
     }
   }
@@ -76,6 +87,11 @@
     padding: 20px 15px 20px 6px;
     border-radius: 5px 0 0 5px;
     background: var(--white);
+    transition: background 0.2s ease-in-out;
+
+    &:hover {
+      background: var(--white-fa);
+    }
 
     &.is-toggle {
       svg {
@@ -104,16 +120,25 @@
       padding: 13px 18px;
       width: 100%;
       border: 1px solid var(--gray-300);
+      font-size: var(--fontSize14);
       font-weight: 600;
       transition-property: border, background-color, color;
       transition-duration: 0.25s;
       transition-timing-function: ease-in-out;
 
+      &:hover {
+        border: 1px solid var(--blue-200);
+        color: var(--blue-200);
+      }
+
       &.is-activate {
         border: 1px solid var(--blue-200);
         background-color: var(--blue-200);
-
         color: #f4f9fe;
+
+        &:hover {
+          background: var(--blue-100);
+        }
       }
     }
 
@@ -122,6 +147,7 @@
       padding-inline: 8px 15px;
       border: 1px solid var(--gray-400);
       border-radius: 10px;
+      font-size: var(--fontSize14);
 
       .map__search-label {
         display: flex;
@@ -175,7 +201,6 @@
     figcaption {
       flex-shrink: 1;
       font-size: var(--fontSize12);
-      /* overflow: hidden; */
       text-overflow: ellipsis;
     }
     h5 {
