feat : 네비게이션 컴포넌트 마크업 추가 및 스타일 코드 작성

--- a/src/components/navigation/navigation.html
+++ b/src/components/navigation/navigation.html
@@ -15,54 +15,89 @@
   </head>
   <body>
     <div class="nav__wrapper">
-      <h1>
-        <a href="#" aria-label="홈페이지 이동">
+      <header class="logo__header">
+        <button type="button" class="nav__open" aria-label="메뉴 열기">
           <svg
             aria-hidden="true"
-            width="81"
-            height="74"
-            viewBox="0 0 81 74"
+            width="40"
+            height="40"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            focusable="false"
+          >
+            <rect y="4" width="24" height="2" fill="black" />
+            <rect y="11" width="24" height="2" fill="black" />
+            <rect y="18" width="24" height="2" fill="black" />
+          </svg>
+        </button>
+        <button type="button" class="nav__close" aria-label="메뉴 닫기">
+          <svg
+            width="16"
+            height="16"
+            viewBox="0 0 16 16"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
           >
             <path
-              d="M7.36377 73.6362L7.36377 61.8544L34.7565 61.8544L34.7565 73.6362L7.36377 73.6362Z"
-              fill="#0055FF"
+              d="M15.5564 14.1423L14.1422 15.5565L7.79918e-05 1.41436L1.41429 0.000149953L15.5564 14.1423Z"
+              fill="#666C70"
             />
             <path
-              d="M31.5166 51.9126L8.24707 51.9136C4.99374 51.9134 2.35645 49.2753 2.35645 46.022C2.3566 42.7687 4.99384 40.1315 8.24707 40.1313H31.5166V51.9126Z"
-              fill="#48B9FF"
-            />
-            <path
-              d="M34.7561 61.8545C38.0095 61.8545 40.6476 64.4918 40.6477 67.7451C40.6477 70.9986 38.0096 73.6367 34.7561 73.6367C31.5028 73.6366 28.8655 70.9985 28.8655 67.7451C28.8656 64.4919 31.5029 61.8546 34.7561 61.8545Z"
-              fill="#0055FF"
-            />
-            <path
-              d="M28.8125 33.873L12.4966 50.1889L12.277 50.3975C9.96452 52.4869 6.39398 52.4169 4.1653 50.1883C1.86503 47.8878 1.86503 44.1581 4.1653 41.8576L28.8125 17.2104V33.873Z"
-              fill="#B8E4FF"
-            />
-            <path
-              d="M55.0803 0C69.3954 0.00016183 81.0002 11.6048 81.0002 25.9199C81.0002 40.235 69.3954 51.8397 55.0803 51.8398C54.9 51.8398 54.7198 51.8377 54.5403 51.834V51.8398L28.8655 51.834V40.2051H40.6477V40.0586H54.4905V40.0547C54.5884 40.0567 54.687 40.0586 54.7854 40.0586C62.5937 40.0586 68.9241 33.7282 68.9241 25.9199C68.924 18.1117 62.5937 11.7822 54.7854 11.7822C47.0757 11.7823 40.8077 17.9529 40.6506 25.625H40.6477V24.4473C40.6477 26.5019 39.5949 28.1926 38.0002 29.1602H28.8655V0.883789H40.6477V3.53613C40.6486 3.53553 40.6497 3.53478 40.6506 3.53418V4.38477C44.7751 1.61569 49.7391 0 55.0803 0ZM40.6477 3.53613C37.3153 5.77444 34.6822 9.41665 32.7288 12.7861C34.5835 9.63639 37.0853 6.91299 40.051 4.79883L40.6477 4.38672V3.53613Z"
-              fill="#48B9FF"
-            />
-            <rect
-              x="28.8655"
-              y="25.6255"
-              width="11.7818"
-              height="42.12"
-              fill="#0055FF"
-            />
-            <circle cx="34.7564" cy="25.0364" r="5.89091" fill="#48B9FF" />
-            <rect
-              x="28.8655"
-              y="25.0361"
-              width="5.89091"
-              height="5.89091"
-              fill="#48B9FF"
+              d="M1.41421 15.5563L0 14.1421L14.1421 0L15.5564 1.41421L1.41421 15.5563Z"
+              fill="#666C70"
             />
           </svg>
-        </a>
-      </h1>
+        </button>
+        <h1>
+          <a href="#" aria-label="메인 페이지 이동">
+            <svg
+              aria-hidden="true"
+              width="81"
+              height="74"
+              viewBox="0 0 81 74"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M7.36377 73.6362L7.36377 61.8544L34.7565 61.8544L34.7565 73.6362L7.36377 73.6362Z"
+                fill="#0055FF"
+              />
+              <path
+                d="M31.5166 51.9126L8.24707 51.9136C4.99374 51.9134 2.35645 49.2753 2.35645 46.022C2.3566 42.7687 4.99384 40.1315 8.24707 40.1313H31.5166V51.9126Z"
+                fill="#48B9FF"
+              />
+              <path
+                d="M34.7561 61.8545C38.0095 61.8545 40.6476 64.4918 40.6477 67.7451C40.6477 70.9986 38.0096 73.6367 34.7561 73.6367C31.5028 73.6366 28.8655 70.9985 28.8655 67.7451C28.8656 64.4919 31.5029 61.8546 34.7561 61.8545Z"
+                fill="#0055FF"
+              />
+              <path
+                d="M28.8125 33.873L12.4966 50.1889L12.277 50.3975C9.96452 52.4869 6.39398 52.4169 4.1653 50.1883C1.86503 47.8878 1.86503 44.1581 4.1653 41.8576L28.8125 17.2104V33.873Z"
+                fill="#B8E4FF"
+              />
+              <path
+                d="M55.0803 0C69.3954 0.00016183 81.0002 11.6048 81.0002 25.9199C81.0002 40.235 69.3954 51.8397 55.0803 51.8398C54.9 51.8398 54.7198 51.8377 54.5403 51.834V51.8398L28.8655 51.834V40.2051H40.6477V40.0586H54.4905V40.0547C54.5884 40.0567 54.687 40.0586 54.7854 40.0586C62.5937 40.0586 68.9241 33.7282 68.9241 25.9199C68.924 18.1117 62.5937 11.7822 54.7854 11.7822C47.0757 11.7823 40.8077 17.9529 40.6506 25.625H40.6477V24.4473C40.6477 26.5019 39.5949 28.1926 38.0002 29.1602H28.8655V0.883789H40.6477V3.53613C40.6486 3.53553 40.6497 3.53478 40.6506 3.53418V4.38477C44.7751 1.61569 49.7391 0 55.0803 0ZM40.6477 3.53613C37.3153 5.77444 34.6822 9.41665 32.7288 12.7861C34.5835 9.63639 37.0853 6.91299 40.051 4.79883L40.6477 4.38672V3.53613Z"
+                fill="#48B9FF"
+              />
+              <rect
+                x="28.8655"
+                y="25.6255"
+                width="11.7818"
+                height="42.12"
+                fill="#0055FF"
+              />
+              <circle cx="34.7564" cy="25.0364" r="5.89091" fill="#48B9FF" />
+              <rect
+                x="28.8655"
+                y="25.0361"
+                width="5.89091"
+                height="5.89091"
+                fill="#48B9FF"
+              />
+            </svg>
+          </a>
+        </h1>
+      </header>
       <nav>
         <ul class="nav__list">
           <li class="nav__item">
@@ -212,13 +247,6 @@
           </li>
         </ul>
       </nav>
-      <div class="profile">
-        <img src="" srcset="" alt="프로필 이미지" width="50" height="50" loading="laze" decoding="async" class="profile__image" />
-        <div class="profile__info">
-          <strong class="profile__name">홍길동</strong>
-          <span class="profile__desc">마이페이지</span>
-        </div>
-      </div>
     </div>
   </body>
 </html>
