--- a/src/components/map/map.html
+++ b/src/components/map/map.html
@@ -209,12 +209,8 @@
                         <figcaption>
                           <h5>자연사 박물관</h5>
                           <p>Natural History Museum</p>
-                          <span
-                            >Cromwell Rd, South Kensington, London SW7 5BD
-                            영국</span
-                          >
                           <span>월요일 오전 10:00~오후 5:50</span>
-                          <span>월요일 오전 10:00~오후 5:50</span>
+                          <span>+44 20 7942 5000</span>
                         </figcaption>
                       </figure>
                     </article>
