--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -1,3 +1,16 @@
+/* 오버레이 스타일, 기본은 none값 */
+.overlay {
+  display: none;
+  position: fixed;
+  inset: 0; /* top:0; left:0; right:0; bottom:0; */
+  background: rgba(24, 24, 27, 0.45);
+  z-index: 15; /* nav__wrapper 보다 낮게 */
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+}
+
+/* 네비게이션 바 */
 .nav__wrapper {
   display: flex;
   flex-direction: column;
@@ -8,30 +21,35 @@
   border-bottom-left-radius: 20px;
 }
 
+/* 로고 헤더 부분 */
 .logo__header {
   display: flex;
   justify-content: center;
   padding-bottom: 36px;
 }
 
+/* 네비게이션 리스트  */
 .nav__list {
   margin-bottom: 108px;
   display: block;
 }
 
+/* 네비게이션 리스트 아이템 */
 .nav__item {
   --medium: 400;
 
-  position: relative;
   display: flex;
+  position: relative;
   align-items: center;
   gap: 12px;
   padding: 12px 16px;
   font-size: var(--fontSize16);
   font-weight: var(--medium);
   z-index: 1;
+  cursor: pointer;
 }
 
+/* 네비게이션 호버 상태 */
 .nav__item::before {
   content: "";
   position: absolute;
@@ -63,11 +81,7 @@
   gap: 32px;
 }
 
-.nav__icon {
-  width: 23px;
-  height: 24px;
-}
-
+/* 모바일 상태 아닐 때, 네비게이션 닫기 버튼 숨김  */
 .nav__close {
   display: none;
   position: absolute;
@@ -80,11 +94,12 @@
   z-index: 20;
 }
 
+/* 모바일 상태 아닐 때, 네비게이션 열기 버튼 숨김 */
 .nav__open {
   display: none;
 }
 
-/* -------------------- 768px 이하 미디어 쿼리 -------------------- */
+/* 모바일 */
 @media (max-width: 768px) {
   .nav__wrapper {
     padding: 10px 15px;
@@ -97,8 +112,9 @@
     position: relative;
     height: 41px;
     background-color: var(--white-fa);
+    margin: 20px;
     padding-bottom: 0;
-		border-radius: 10px;
+    border-radius: 10px;
   }
 
   .logo__header .nav__open {
@@ -115,12 +131,11 @@
 
   .logo__header .nav__close {
     display: none;
-    width: 40px;
-    height: 40px;
     position: absolute;
     right: 0;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 20%;
+    transform: translateY(-100%);
+
     background: transparent;
     border: none;
     padding: 0;
